# doom-colormap-generator

./: Cargo.toml  README.md
.github/workflows/: release.yml
example-input/: creepypasta_sh-t.json  hsv_blendmodes.json  vanilla.json
src/: dcolors.rs  draw.rs  lib.rs  main.rs
test-input/: test1.json
